--- a/.github/workflows/build_image_gitee.yml
+++ b/.github/workflows/build_image_gitee.yml
@@ -13,9 +13,9 @@ jobs:
         uses: ilteoood/docker_buildx@master
         with:
           publish: true
-          imageName: evinedeng/jd
+          imageName: hzzhy/jd
           dockerFile: docker/gitee/Dockerfile
-          platform: linux/amd64,linux/arm64,linux/arm/v7
+          platform: linux/amd64
           tag: gitee
           dockerUser: ${{ secrets.DOCKER_USERNAME }}
           dockerPassword: ${{ secrets.DOCKER_PASSWORD }}
